--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
-  
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
     <title>React App</title>
   </head>
   <body>
-  
     <div id="root"></div>
-   
   </body>
 </html>
